ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - mirekng.com
    secretName: ssl-certificate
  rules:
  - host: mirekng.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
  - host: tv.mirekng.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
  - host: rss.mirekng.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss-service
            port:
              number: 8082
  - host: organizr.mirekng.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: organizr-service
            port:
              number: 8081
